--- a/index.html
+++ b/index.html
@@ -5,39 +5,148 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>@dmtors - Derek Mark Torsani</title>
+    <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
+    <title>Derek Torsani</title>
 </head>
 
 <body>
 
 <div class="container">
 
-    <h1 class="bold">Hi, I'm called Derek <span>(dare-ick)</span>.</h1>
-    <p>I'm an <a class="bold" href="https://www.16personalities.com/infj-personality" target="_blank">INFJ</a>, a minimalist, morning person, musician, vegetarian, and I really enjoy untangling things.</p>
+    <p class="bold">Derek Torsani</p>
+    </br></br>
+    <h6><span>Contact</span></h6>
+    <p class="">📬 derektorsani@gmail.com</p>
+    <p class="">🌎 @dmtors</p>
+    </br></br>
+
+    <h6><span>Education</span></h6>
+    <p><span class="bold">Bachelor of Fine Arts</span>, Graphic Design, MICA <span class="grey">/</span> <a href="https://www.mica.edu/" target="_blank">mica.edu</a></p>
+    <span>JAN 2008 — MAY 2011 / Baltimore, MD</span>
+    </br></br></br>
+
+    <h6><span>Trade</span></h6>
+    <p><span class="bold">Oracle</span>, Senior Product Designer <span class="grey">/</span> <a href="https://www.oracle.com/" target="_blank">oracle.com</a></p>
+    <span>APR 2018 — PRESENT / Remote</span>
+    </br></br>
+    <a href="derektorsani-resume-2018.pdf">Full Resume</a>
+    </br></br></br>
+
+    <h6><span>Projects</span></h6>
+    <p><span class="bold">Signals Mobile Design System</span> <span class="grey">/</span> <a href="https://www.alarm.com/" target="_blank">alarm.com</a></p>
+    <span>EARLY 2018</span>
+    </br></br>
+    <p><span class="bold">SamCart eCommerce Web App</span>, Lead Designer <span class="grey">/</span> <a href="https://www.samcart.com/" target="_blank">samcart.com</a></p>
+    <span>2016 — 2017</span>
+    </br></br>
+    <p><span class="bold">Halfdollar Budgeting Tools</span> <span class="grey">/</span> <a href="http://halfdollar.org" target="_blank">halfdollar.org</a></p>
+    <span>2015 — PRESENT</span>
+    </br></br>
+    <p><span class="bold">Weiigh</span> <span class="grey">/</span> <a href="http://weiigh.com" target="_blank">weiigh.com</a></p>
+    <span>2017 — PRESENT</span>
+    </br></br>
+    <p><span class="bold">FriendsAnonymous</span> <span class="grey">/</span> <a href="http://friendsanonymo.us" target="_blank">friendsanonymo.us</a></p>
+    <span>2017 — PRESENT</span>
+    </br></br>
+    <p><span class="bold">Grey Area</span> <span class="grey">/</span> <a href="http://heygreyarea.com" target="_blank">heygreyarea.com</a></p>
+    <span>2018 — PRESENT</span>
+    </br></br>
+    <a href="mailto:derektorsani@gmail.com subject=Portfolio Examples Request" target="_blank">Portfolio Examples Available Upon Request</a>
+    </br></br></br>
+
+    <h6><span>Hobbies</span></h6>
+    <p>🎥 <span class="bold">Filmmaking</span> <span class="grey">/</span> <a href="https://www.vimeo.com/dmtors" target="_blank">Vimeo</a></p>
+    <p>📷 <span class="bold">Photography</span> <span class="grey">/</span> <a href="https://www.unsplash.com/@dmtors" target="_blank">Unsplash</a></p>
+    <p>🎶 <span class="bold">Music</span> <span class="grey">/</span> <a href="https://www.soundcloud.com/nonfictiondmv" target="_blank">SoundCloud</a></p>
+    <p>📝 <span class="bold">Writing</span> <span class="grey">/</span> <a href="https://www.medium.com/@dmtors" target="_blank">Medium</a></p>
+    </br></br></br>
+
+    <h6><span>Biography</span></h6>
+    <p>Sleeping to 8am is considered sleeping in for me. I like to get an early and productive start to my day. I also enjoy going out at night, either to see a show, go dancing, or to be active outside.</p>
     </br>
-    <p class="bold">Currently</p>
-    <p>Senior Product Designer @ <a class="bold" href="https://oracle.com" target="_blank">Oracle</a><span>, Remote</span></p>
+    <p>My diet consists of mostly vegetables and legumes. It's just what works best for my body.</p>
     </br>
-    <p class="bold">Previously</p>
-    <p>UX Designer @ <a class="bold" href="https://alarm.com" target="_blank">Alarm.com</a><span>, Tysons, VA</span></p>
-    <p>Lead Designer @ <a class="bold" href="https://samcart.com" target="_blank">SamCart</a><span>, Fulton, MD</span></p>
-    <p>Senior Designer @ <a class="bold" href="https://brllnt.co" target="_blank">Brllnt</a><span>, Washington, DC</span></p>
-    <p>Multimedia Designer @ <a class="bold" href="https://sandals.com" target="_blank">Sandals</a><span>, Miami, FL</span></p>
+    <p>I take care of my self; my body, my mind, and my soul.</p>
     </br>
-    <p class="bold">Projects</p>
-    <p><a class="bold" href="https://instagram.com/heygreyarea" target="_blank">Grey Area</a></p>
-    <p><a class="bold" href="http://weiigh.com" target="_blank">Weiigh</a></p>
-    <p><a class="bold" href="http://friendsanonymo.us" target="_blank">FriendsAnonymous</a></p>
+    <p>I'm not big on the gym, but I workout daily, ride my bike, skateboard, and play ice hockey.</p>
     </br>
-    <p class="bold">Hobbies</p>
-    <p><a class="bold" href="https://soundcloud.com/nonfictiondmv" target="_blank">Music</a></p>
-    <p><a class="bold" href="https://unsplash.com/@dmtors" target="_blank">Photography</a></p>
-    <p><a class="bold" href="https://vimeo.com/dmtors" target="_blank">Filmmaking</a></p>
+    <p>I don't like seeking attention, and am not on most social media platforms. If I'm on any, it's for a purpose and is quite sparingly.</p>
     </br>
-    <p class="bold"><a class="bold" href="https://twitter.com/dmtors" target="_blank">Twitter</a>, <a class="bold" href="https://dribbble.com/dmtors" target="_blank">Dribbble</a>, <a class="bold" href="https://medium.com/@dmtors" target="_blank">Medium</a>, <a class="bold" href="https://linkedin.com/in/derektorsani" target="_blank">LinkedIn</a>, <a class="bold" href="mailto:derektorsani@gmail.com" target="_blank">Email</a></p>
+    <p>The books I read are usually about environmental science, civil rights, and the balance between humanity and nature.</p>
     </br>
-    <h6 class="bold">Work examples and resumé available upon request.</h6>
+    <p>I play a variety of instruments including drums, bass, and guitar. I'm always writing music, and am definitely my toughest critic.</p>
+    </br>
+    <p>My relationship with God is a personal and ever evolving one.</p>
+    </br>
+    <p>My M.O. is to love people for who they are, serve others and spread kindness, and always value the education and understanding of people different than myself.</p>
+    </br>
+    <p>I'm close with my family, but I also thrive off some distance and alone time. I enjoy traveling to new and old places, meeting new people, and having meaningful and sometimes uncomfortable conversations. It's okay to disagree, but important to accept. That's the beauty in individuality.</p>
+    </br>
+    <p>I keep my spaces tidy and organized, which helps my mind to not be strangled and gives me the ability to think more freely.</p>
+    </br>
+    <p>There are some material things I love to have which feed and spark my creativity, but I don't need much. I don't like having many objects.</p>
+    </br>
+    <p>Financial stability is important to me, and I'm a frugal fellow, but I also enjoy splurging on a good experience and will donate to anyone doing something impactful with their resources.</p>
+    </br>
+    <p>I collect unique coins and paper currency, but I must either find or be gifted them. I thoroughly enjoy untangling things, such as necklaces and cables. I stared death in the face when I was five months old, but God kept me here for something much larger than myself.</p>
+    </br>
+    <p>Altruism plays a important role in my career. I've found that I need to spend my day-to-day making positive and meaningful impact with a team of genuine people. Working a flexible schedule remotely has proven to nourish my most productive self. I am most motivated when I can focus in my own space, on my own time, and with the ability to travel and live my personal life to the fullest. In this environment, I am able to be loyal, dedicated, and have the work ethic that I have learned from my entrepreneurial family.</p>
+    </br>
+    <p>Discipline and determination help me accomplish my goals. There's too much to gain in this life to pass on opportunity. Sometimes you have to push through the heat to get to the sun. I try not to fret on the things of the past or the things of which I do not have control over, and always try to learn from my experiences. Onward and upward.</p>
+    </br></br></br>
+
+    <h6><span>Reading Queue</span></h6>
+    <s><a class="grey" href="https://www.amazon.com/Crazy-Love-Overwhelmed-Relentless-God/dp/1434705943" target="_blank">Crazy Love by Francis Chan</a></s>
+    </br>
+    <s><a class="grey" href="https://www.amazon.com/Forgotten-God-Reversing-Tragic-Neglect/dp/1434767957" target="_blank">Forgotten God by Francis Chan</a></s>
+    </br>
+    <s><a class="grey" href="https://www.amazon.com/Circle-Maker-Praying-Circles-Greatest/dp/1491511370" target="_blank">The Circle Maker by Mark Batterson</a></s>
+    </br>
+    <s><a class="grey" href="https://www.amazon.com/Silent-Spring-Rachel-Carson/dp/0618249060" target="_blank">Silent Spring by Rachel Carson</a></s>
+    </br>
+    <a href="https://www.amazon.com/Lab-Girl-Hope-Jahren/dp/1101873728/" target="_blank">Lab Girl by Hope Jahren</a>
+    </br>
+    <a href="https://www.amazon.com/World-Without-Us-Alan-Weisman/dp/0312427905" target="_blank">The World Without Us by Alan Weisman</a>
+    </br>
+    <a href="https://www.amazon.com/What-Eyes-Dont-See-Resistance/dp/0399590838" target="_blank">What The Eyes Don't See by Mona Hanna-Attisha</a>
+    </br>
+    <a href="https://www.amazon.com/Ishmael-Novel-Daniel-Quinn/dp/0553375407" target="_blank">Ishmael by Daniel Quinn</a>
+    </br>
+    <a href="https://www.amazon.com/My-Ishmael-Daniel-Quinn/dp/0553379658/" target="_blank">My Ishmael by Daniel Quinn</a>
+    </br>
+    <a href="https://www.amazon.com/Story-B-Ishmael-Daniel-Quinn/dp/0553379011/" target="_blank">The Story of B by Daniel Quinn</a>
+    </br>
+    <a href="https://www.amazon.com/Tupac-Shakur-Vibe-Magazine/dp/0609802178" target="_blank">Tupac Shakur by Vibe Magazine</a>
+    </br>
+    <a href="https://www.amazon.com/Between-World-Me-Ta-Nehisi-Coates/dp/0451482212" target="_blank">Between The World And Me by Ta-Nehisi Coates</a>
+    </br>
+    <a href="https://www.amazon.com/Other-Side-Freedom-Case-Hope/dp/0525560327" target="_blank">On The Other Side Of Freedom by DeRay Mckesson</a>
+    </br>
+    <a href="https://www.amazon.com/Not-My-Neighborhood-Bigotry-American/dp/1566638437" target="_blank">Not In My Neighborhood by Antero Pietila</a>
+    </br>
+    <a href="https://www.amazon.com/Human-Nature-new-Preface-Revised/dp/0674016386" target="_blank">On Human Nature by Edward O. Wilson</a>
+    </br>
+    <a href="https://www.amazon.com/gp/product/0800636856/ref=ox_sc_sfl_title_16?ie=UTF8&psc=1&smid=AMM7ESLB3M5P5" target="_blank">I Have A Dream by James Echols</a>
+    </br>
+    <a href="https://www.amazon.com/New-Jim-Crow-Incarceration-Colorblindness/dp/1595586431" target="_blank">The New Jim Crow by Michelle Alexander</a>
+    </br>
+    <a href="https://www.amazon.com/March-Trilogy-Slipcase-John-Lewis/dp/1603093958" target="_blank">March by John Lewis</a>
+    </br>
+    <a href="https://www.amazon.com/Human-Nature-new-Preface-Revised/dp/0674016386" target="_blank">On Human Nature by Edward O. Wilson</a>
+    </br>
+    <a href="https://www.amazon.com/Carolina-Skeletons-Execution-Americas-Youngest/dp/089296264X" target="_blank">Carolina Skeletons by David Stout</a>
+    </br>
+    <a href="https://www.amazon.com/Gregory-Maguire-Wicked-Thirty-second-Printing/dp/B00N4JN9WA/" target="_blank">Wicked by Gregory Maguire</a>
+    </br>
+    <a href="https://www.amazon.com/Jesus-Land-Memoir-Julia-Scheeres/dp/1619020653" target="_blank">Jesus Land by Julia Scheeres</a>
+    </br></br></br>
+
+    <h6><span>Links</span></h6>
+    <p>🐦 <a href="https://twitter.com/dmtors" target="_blank">Twitter</a></p>
+    <p>🏀 <a href="https://dribbble.com/dmtors" target="_blank">Dribbble</a></p>
+    <p>🖋 <a href="https://codepen.io/dmtors" target="_blank">CodePen</a></p>
+    <p>🐈 <a href="https://github.com/dmtors" target="_blank">GitHub</a></p>
+    </br></br></br>
 
 </div>
 
