--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 
     <h6><span>Education</span></h6>
     <p><span class="bold">Bachelor of Fine Arts</span>, Graphic Design, MICA <span class="grey">/</span> <a href="https://www.mica.edu/" target="_blank">mica.edu</a></p>
-    <span>JAN 2008 — MAY 2011 / Baltimore, MD</span>
+    <span>2008 — 2011 / Baltimore, MD</span>
     </br></br></br>
 
     <h6><span>Trade</span></h6>
     <p><span class="bold">Oracle</span>, Senior Product Designer <span class="grey">/</span> <a href="https://www.oracle.com/" target="_blank">oracle.com</a></p>
-    <span>APR 2018 — PRESENT / Remote</span>
+    <span>2018 — PRESENT / Remote</span>
     </br></br>
     <a href="derektorsani-resume-2018.pdf">Full Resume</a>
     </br></br></br>
