--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <h6><span>Projects</span></h6>
     <p><span class="bold">Signals Mobile Design System</span> <span class="grey">/</span> <a href="https://www.alarm.com/" target="_blank">alarm.com</a></p>
-    <span>EARLY 2018</span>
+    <span>2018</span>
     </br></br>
     <p><span class="bold">SamCart eCommerce Web App</span>, Lead Designer <span class="grey">/</span> <a href="https://www.samcart.com/" target="_blank">samcart.com</a></p>
     <span>2016 — 2017</span>
