--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </br>
     <p>I collect unique coins and paper currency, but I must either find or be gifted them. I thoroughly enjoy untangling things, such as necklaces and cables. I stared death in the face when I was five months old, but God kept me here for something much larger than myself.</p>
     </br>
-    <p>Altruism plays a important role in my career. I've found that I need to spend my day-to-day making positive and meaningful impact with a team of genuine people. Working a flexible schedule remotely has proven to nourish my most productive self. I am most motivated when I can focus in my own space, on my own time, and with the ability to travel and live my personal life to the fullest. In this environment, I am able to be loyal, dedicated, and have the work ethic that I have learned from my entrepreneurial family.</p>
+    <p>Altruism plays an important role in my career. I've found that I need to spend my day-to-day making positive and meaningful impact with a team of genuine people. Working a flexible schedule remotely has proven to nourish my most productive self. I am most motivated when I can focus in my own space, on my own time, and with the ability to travel and live my personal life to the fullest. In this environment, I am able to be loyal, dedicated, and have the work ethic that I have learned from my entrepreneurial family.</p>
     </br>
     <p>Discipline and determination help me accomplish my goals. There's too much to gain in this life to pass on opportunity. Sometimes you have to push through the heat to get to the sun. I try not to fret on the things of the past or the things of which I do not have control over, and always try to learn from my experiences. Onward and upward.</p>
     </br></br></br>
@@ -139,6 +139,8 @@
     <a href="https://www.amazon.com/Gregory-Maguire-Wicked-Thirty-second-Printing/dp/B00N4JN9WA/" target="_blank">Wicked by Gregory Maguire</a>
     </br>
     <a href="https://www.amazon.com/Jesus-Land-Memoir-Julia-Scheeres/dp/1619020653" target="_blank">Jesus Land by Julia Scheeres</a>
+    </br></br>
+    <p class="grey">📚 Please reach out if you have any book recommendations. :)</p>
     </br></br></br>
 
     <h6><span>Links</span></h6>
