--- a/index.html
+++ b/index.html
@@ -150,6 +150,9 @@
     <p>🐈 <a href="https://github.com/dmtors" target="_blank">GitHub</a></p>
     </br></br></br>
 
+    <img style="width:100%; border-radius:5px;" src="dmtors.gif" alt="Young white boy dancing to 'I Missed The Bus' by Kris Kross in 1993 dressed in a hand made Maryland Terrapins vest and matching backwards cap."/>
+    </br></br></br>
+
 </div>
 
 </body>
