--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
     </br></br></br>
 
     <h6><span>Hobbies</span></h6>
-    <p>🎥 <span class="bold">Filmmaking</span> <span class="grey">/</span> <a href="https://www.vimeo.com/dmtors" target="_blank">Vimeo</a></p>
-    <p>📷 <span class="bold">Photography</span> <span class="grey">/</span> <a href="https://www.unsplash.com/@dmtors" target="_blank">Unsplash</a></p>
     <p>🎶 <span class="bold">Music</span> <span class="grey">/</span> <a href="https://www.soundcloud.com/nonfictiondc" target="_blank">SoundCloud</a></p>
+    <p>📷 <span class="bold">Photography</span> <span class="grey">/</span> <a href="https://www.unsplash.com/@dmtors" target="_blank">Unsplash</a></p>
+    <p>🎥 <span class="bold">Filmmaking</span> <span class="grey">/</span> <a href="https://www.vimeo.com/dmtors" target="_blank">Vimeo</a></p>
     <p>📝 <span class="bold">Writing</span> <span class="grey">/</span> <a href="https://www.medium.com/@dmtors" target="_blank">Medium</a></p>
     </br></br></br>
 
@@ -82,9 +82,9 @@
     </br>
     <p>I'm close with my family, but I also thrive off some distance and alone time. I enjoy traveling to new and old places, meeting new people, and having meaningful and sometimes uncomfortable conversations. It's okay to disagree, but important to accept. That's the beauty in individuality.</p>
     </br>
-    <p>I keep my spaces tidy and organized, which helps my mind to not be strangled and gives me the ability to think more freely.</p>
+    <p>I keep my spaces tidy and organized, which helps my mind to not be strangled and gives me the ability to think more freely. There are some material things I love to have which feed and spark my creativity, but I don't need much. I don't like having many objects.</p>
     </br>
-    <p>There are some material things I love to have which feed and spark my creativity, but I don't need much. I don't like having many objects.</p>
+    <p>I don't feel the world or anyone owes me anything. I also don't like owing anyone anything. If I tell you I'm going to do something, I'm going to do everything I can to do it.</p>
     </br>
     <p>Financial stability is important to me, and I'm a frugal fellow, but I also enjoy splurging on a good experience and will donate to anyone doing something impactful with their resources.</p>
     </br>
@@ -144,6 +144,7 @@
     </br></br></br>
 
     <h6><span>Links</span></h6>
+    <p>👵🏼 <a href="https://instagram.com/derektorsani" target="_blank">Instagram</a></p>
     <p>🐦 <a href="https://twitter.com/dmtors" target="_blank">Twitter</a></p>
     <p>🏀 <a href="https://dribbble.com/dmtors" target="_blank">Dribbble</a></p>
     <p>🖋 <a href="https://codepen.io/dmtors" target="_blank">CodePen</a></p>
