--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </br></br></br>
 
     <h6><span>Hobbies</span></h6>
-    <p>🎶 <span class="bold">Music</span> <span class="grey">/</span> <a href="https://www.soundcloud.com/nonfictiondc" target="_blank">SoundCloud</a></p>
+    <p>🎶 <span class="bold">Music</span> <span class="grey">/</span> <a href="https://www.soundcloud.com/sequoiadc" target="_blank">SoundCloud</a></p>
     <p>📷 <span class="bold">Photography</span> <span class="grey">/</span> <a href="https://www.unsplash.com/@dmtors" target="_blank">Unsplash</a></p>
     <p>🎥 <span class="bold">Filmmaking</span> <span class="grey">/</span> <a href="https://www.vimeo.com/dmtors" target="_blank">Vimeo</a></p>
     <p>📝 <span class="bold">Writing</span> <span class="grey">/</span> <a href="https://www.medium.com/@dmtors" target="_blank">Medium</a></p>
