--- a/index.html
+++ b/index.html
@@ -54,6 +54,26 @@
     <a href="mailto:derektorsani@gmail.com subject=Portfolio Examples Request" target="_blank">Portfolio Examples Available Upon Request</a>
     </br></br></br>
 
+    <h6><span>Experiments</span></h6>
+    <p><span class="bold">Automatic Content Translation</span> <span class="grey">/ In Progress</span></p>
+    <span>PRESENT</span>
+    </br></br>
+    <p><span class="bold">100 Days of Animated Design Prompts</span> <span class="grey">/</span> <a href="https://medium.com/@dmtors/my-4-5-month-journey-with-daily-ui-1ce0f103d2bb" target="_blank">Article</a> <span class="grey">/</span> <a href="https://dribbble.com/dmtors/projects/319430-Daily-UI" target="_blank">Project</a></p>
+    <span>2016</span>
+    </br></br>
+    <p><span class="bold">Google Design Explorations</span> <span class="grey">/</span> <a href="https://blog.prototypr.io/google-design-explorations-f398591e8ccf" target="_blank">Article</a></p>
+    <span>2016</span>
+    </br></br>
+    <p><span class="bold">Looping Logos</span> <span class="grey">/</span> <a href="https://dribbble.com/dmtors/projects/338960-Looping-Logos" target="_blank">Project</a></p>
+    <span>2015</span>
+    </br></br>
+    <p><span class="bold">The Show/Hide Eyeball</span> <span class="grey">/</span> <a href="https://blog.prototypr.io/the-show-hide-eyeball-in-ui-design-7514991611b6" target="_blank">Article</a></p>
+    <span>2015</span>
+    </br></br>
+    <p><span class="bold">Sandals Resorts App</span> <span class="grey">/</span> <a href="https://medium.com/@dmtors/sandals-resorts-app-def86054ab23" target="_blank">Case Study</a></p>
+    <span>2015</span>
+    </br></br></br>
+
     <h6><span>Hobbies</span></h6>
     <p>🎶 <span class="bold">Music</span> <span class="grey">/</span> <a href="https://www.soundcloud.com/sequoiadc" target="_blank">SoundCloud</a></p>
     <p>📷 <span class="bold">Photography</span> <span class="grey">/</span> <a href="https://www.unsplash.com/@dmtors" target="_blank">Unsplash</a></p>
@@ -70,29 +90,43 @@
     </br>
     <p>I'm not big on the gym, but I workout daily, ride my bike, skateboard, and play ice hockey.</p>
     </br>
-    <p>I don't like seeking attention, and am not on most social media platforms. If I'm on any, it's for a purpose and is quite sparingly.</p>
+    <p>I don't spend much time on social media. I don't like seeking attention.</p>
     </br>
-    <p>The books I read are usually about environmental science, civil rights, and the balance between humanity and nature.</p>
+    <p>The books I read are usually about the balance between humanity and nature through environmental science, human rights, and personal enlightenment.</p>
     </br>
-    <p>I play a variety of instruments including drums, bass, and guitar. I'm always writing music, and am definitely my toughest critic.</p>
+    <p>I play a variety of instruments including drums, bass, and guitar. I also produce music, and am definitely my toughest critic.</p>
     </br>
     <p>My relationship with God is a personal and ever evolving one.</p>
     </br>
     <p>My M.O. is to love people for who they are, serve others and spread kindness, and always value the education and understanding of people different than myself.</p>
     </br>
-    <p>I'm close with my family, but I also thrive off some distance and alone time. I enjoy traveling to new and old places, meeting new people, and having meaningful and sometimes uncomfortable conversations. It's okay to disagree, but important to accept. That's the beauty in individuality.</p>
+    <p>I'm close with my family, but I also thrive off some distance and alone time. I enjoy traveling to new and old places, meeting new people, and having meaningful and sometimes uncomfortable conversations typically following the maieutic approach. It's okay to disagree, but important to accept. That's the beauty in individuality.</p>
     </br>
-    <p>I keep my spaces tidy and organized, which helps my mind to not be strangled and gives me the ability to think more freely. There are some material things I love to have which feed and spark my creativity, but I don't need much. I don't like having many objects.</p>
+    <p>I keep my mental and physical spaces tidy and organized. It helps my mind to not be strangled and gives me the ability to think more freely. I don't like having many objects. There are some material things I love to have which feed and spark my creativity, but I don't need much.</p>
     </br>
     <p>I don't feel the world or anyone owes me anything. I also don't like owing anyone anything. If I tell you I'm going to do something, I'm going to do everything I can to do it.</p>
     </br>
-    <p>Financial stability is important to me, and I'm a frugal fellow, but I also enjoy splurging on a good experience and will donate to anyone doing something impactful with their resources.</p>
+    <p>Financial stability is important to me, and I'm a frugal fellow, but I also enjoy splurging on a good experience and donating to anyone doing something impactful and meaningful with their resources.</p>
     </br>
-    <p>I collect unique coins and paper currency, but I must either find or be gifted them. I thoroughly enjoy untangling things, such as necklaces and cables. I stared death in the face when I was five months old, but God kept me here for something much larger than myself.</p>
+    <p>I collect unique coins and paper currency, but I must either find or be gifted them. I thoroughly enjoy untangling things, such as necklaces and cables. I stared death in the face when I was five months old, but I believe I was kept here for something much larger than myself.</p>
     </br>
-    <p>Altruism plays an important role in my career. I've found that I need to spend my day-to-day making positive and meaningful impact with a team of genuine people. Working a flexible schedule remotely has proven to nourish my most productive self. I am most motivated when I can focus in my own space, on my own time, and with the ability to travel and live my personal life to the fullest. In this environment, I am able to be loyal, dedicated, and have the work ethic that I have learned from my entrepreneurial family.</p>
+    <p>Altruism plays an important role in my career. I've found that I need to spend my day-to-day making positive and meaningful impact with a team of genuine people. Working a flexible schedule remotely has proven to nourish my most productive self. I am most motivated when I can focus in my own space, on my own time, and with the ability to travel and live my personal life to the fullest. In this environment, I am able to be loyal, dedicated, and have the strong work ethic that I have learned from my entrepreneurial family.</p>
     </br>
-    <p>Discipline and determination help me accomplish my goals. There's too much to gain in this life to pass on opportunity. Sometimes you have to push through the heat to get to the sun. I try not to fret on the things of the past or the things of which I do not have control over, and always try to learn from my experiences. Onward and upward.</p>
+    <p>Discipline and determination help me accomplish my goals, of which I make a lot. There's too much to gain in this life to pass on opportunity. Sometimes you have to push through the heat to get to the sun. I try not to fret on the things of the past or the things of which I do not have control over, and I always try to learn from my experiences. Onward and upward.</p>
+    </br></br></br>
+
+    <h6><span>Currently Studying on <a class="bold" href="https://www.khanacademy.org/" target="_blank">Khan Academy</a></span></h6>
+    <p class="bold">🥧 Mathematics</p>
+    <p class="bold">⚡️ Physics</p>
+    <p class="bold">🔬 Chemistry</p>
+    <p class="bold">🌲 Biology</p>
+    </br></br></br>
+
+    <h6><span>Currently Learning on <a class="bold" href="https://www.duolingo.com/" target="_blank">Duolingo</a></span></h6>
+    <p class="bold">🇮🇹 Italian</p>
+    <p class="bold">🇪🇸 Spanish</p>
+    <p class="bold">🇵🇹 Portuguese</p>
+    <p class="bold">🇫🇷 French</p>
     </br></br></br>
 
     <h6><span>Reading Queue</span></h6>
