--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <p>Discipline and determination help me accomplish my goals, of which I make a lot. There's too much to gain in this life to pass on opportunity. Sometimes you have to push through the heat to get to the sun. I try not to fret on the things of the past or the things of which I do not have control over, and I always try to learn from my experiences. Onward and upward.</p>
     </br></br></br>
 
-    <h6><span>Currently Studying on <a class="bold" href="https://www.khanacademy.org/" target="_blank">Khan Academy</a></span></h6>
+    <!-- <h6><span>Currently Studying on <a class="bold" href="https://www.khanacademy.org/" target="_blank">Khan Academy</a></span></h6>
     <p class="bold">🥧 Mathematics</p>
     <p class="bold">⚡️ Physics</p>
     <p class="bold">🔬 Chemistry</p>
@@ -127,7 +127,7 @@
     <p class="bold">🇪🇸 Spanish</p>
     <p class="bold">🇵🇹 Portuguese</p>
     <p class="bold">🇫🇷 French</p>
-    </br></br></br>
+    </br></br></br> -->
 
     <h6><span>Reading Queue</span></h6>
     <s><a class="grey" href="https://www.amazon.com/Crazy-Love-Overwhelmed-Relentless-God/dp/1434705943" target="_blank">Crazy Love by Francis Chan</a></s>
@@ -139,6 +139,10 @@
     <s><a class="grey" href="https://www.amazon.com/Silent-Spring-Rachel-Carson/dp/0618249060" target="_blank">Silent Spring by Rachel Carson</a></s>
     </br>
     <a href="https://www.amazon.com/Lab-Girl-Hope-Jahren/dp/1101873728/" target="_blank">Lab Girl by Hope Jahren</a>
+    </br>
+    <a href="https://www.amazon.com/Sophist-Hackett-Classics-Plato/dp/087220202X/" target="_blank">Sophist by Plato</a>
+    </br>
+    <a href="https://www.amazon.com/Three-Cups-Tea-Mission-Promote/dp/0143038257/" target="_blank">Three Cups of Tea by Greg Mortenson</a>
     </br>
     <a href="https://www.amazon.com/World-Without-Us-Alan-Weisman/dp/0312427905" target="_blank">The World Without Us by Alan Weisman</a>
     </br>
